# FilesDumper

./: CMakeLists.txt  FilesDumper.ini  README.md  build.bat
src/: dllmain.cpp
